styles.css
body {
  font-family: Calibri, Arial, sans-serif;
  text-align: center;
  }
ul {
  border: 1px black solid;
}
img {
  height: 284px;
  width: 428px;
  border: 2px green dashed;
  padding: 5px 10px 5px 10px;
}

#first-ingredient {
 color: blue; 
}

.section-heading {
  background-color: #ffd699; 
  font-style: italic;
}

